--- a/App/Represent/mobile/src/main/res/values/strings.xml
+++ b/App/Represent/mobile/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Represent</string>
-
+    <string name="google_app_id">represent-aa09c</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
 </resources>
